crates/tapir-script/compiler/src/snapshot_tests/grammar/errors/extern_fn_with_block.tapir
extern fn foo(x: int) -> int {
    return 3;
}